--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -1,7 +1,10 @@
 :root {
   --ocean-green: #5fbb97ff;
   --charcoal: #294c60ff;
-  --white: #fbfbfbff;
+  --white: rgb(236, 236, 236);
+  --black: #020212;
   --imperial-red: rgb(222, 32, 54);
   --carolina-blue: #00a5e0ff;
+  --grey: #333;
+  --text-grey: #959393;
 }
