--- a/sass/patterns/_footer.scss
+++ b/sass/patterns/_footer.scss
@@ -1,6 +1,6 @@
 footer {
-  background-color: var(--white);
-  color: var(--charcoal);
+  background-color: var(--black);
+  color: var(--text-grey);
   border-bottom: 0.4rem solid var(--charcoal);
   border-top: 0.4rem solid var(--charcoal);
 }
@@ -14,13 +14,12 @@ footer {
 }
 
 .footer a {
-  color: var(--charcoal);
+  color: var(--text-grey);
   text-decoration: none;
 }
 
 .footer a:hover,
 .footer a:focus-visible {
-  color: var(--carolina-blue);
   font-weight: bold;
 }
 
