--- a/sass/patterns/_header.scss
+++ b/sass/patterns/_header.scss
@@ -1,7 +1,3 @@
-header {
-  background-color: var(--white);
-}
-
 .header {
   ul {
     list-style: none;
@@ -23,7 +19,7 @@ header {
   }
 
   .nav__div {
-    background-color: var(--white);
+    background-color: var(--black);
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -53,12 +49,12 @@ header {
   .nav__link i {
     display: inline-block;
     margin-right: 0.5rem;
-    color: var(--charcoal); /* Icon color */
+    color: var(--text-grey); /* Icon color */
   }
 
   .nav__link p {
     margin: 0;
-    color: var(--charcoal); /* Icon color */
+    color: var(--text-grey); /* Icon color */
   }
 
   @media only screen and (min-width: 50em) {
@@ -66,11 +62,6 @@ header {
       text-decoration: none;
       color: var(--charcoal);
       padding: 0.35rem;
-    }
-
-    .nav__link:hover {
-      background-color: var(--carolina-blue);
-      color: var(--white);
     }
   }
 
@@ -112,7 +103,7 @@ header {
       display: flex;
       flex-direction: row;
       align-items: center;
-      background-color: transparent;
+
       gap: 4rem;
     }
     .nav__list {
